--- a/index.html
+++ b/index.html
@@ -1,54 +1,116 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="author" content="Kauê Lima">
-    <link rel="stylesheet" href="./src/css/desafio_corriculum.css">
-    <link rel="shortcut icon" href="./src/imagens/icon-curriculum.png" type="Icon Curriculum">
-    <title>Currículo | Kauê Lima</title>
-</head>
-<body>
-    <h1>Kaue Aparecido da Conceição de Lima</h1>
-    <ul class="caracteristicas">
-        <li>Zona Leste - São Paulo/SP</li>
-        <li>Celular: (11)99310-6261/<a href="https://wa.me/5511993106261" target="_blank">WhatsApp</a></li>
-        <li>E-mail: kaue5939.lima@gmail.com</li>
-        <li>Acesse meu <a href="https://www.linkedin.com/in/kau%C3%AA-lima-234515182/" target="_blank">Linkedin</a></li>
-    </ul>
-
-    <ul class="menu">
-        <li><a href="#objetivo">Objetivo</a></li>
-        <li><a href="#experiencia">Experiência</a></li>
-        <li><a href="#qualificacao">Qualificação</a></li>
-    </ul>
-
-    <h2 id="objetivo">Objetivo</h2>
-    <p class="objetivo-profissional">Desenvolvedor Front-End/Webdesigner</p>
-
-    <h2 id="experiencia">Experiência profissional</h2>
-    <div class="exp-profi">
-        <h3><a href="https://totaletecnologia.com.br/" target="_blank">Totale</a> - 30/04/2020 - 31/01/2023</h3>
-        <h4>Aprendiz de escritório</h4>
-        <p>Responsável por incluir, analisar e baixar os contratos no Aniel.
-            Auxiliar os monitores de rota.</p>
-    
-        <h3><a href="https://totaletecnologia.com.br/" target="_blank">Totale</a> - 01/02/2022 - 14/12/2023</h3>
-        <h4>Auxiliar de Escritório Geral</h4>
-        <p>Responsável pelo indicador do LOG/WIFI 6 | Realização do controle de relatório de Retorno de Credenciada
-            Suporte COP ao cliente para soluções de seus problemas. Planejamento e desenvolvimento de planilhas na execução de tarefas diárias</p>
-    </div>
-
-        <h2 id="qualificacao">Resumo de Qualificação</h2>
-        <ul>
-            <li>Especialidades: Front-end (HTML, CSS, Javascript) e Back-End (PHP).</li>
-            <li>Google ADS, Google Analytics.</li>
-        </ul>
-    
-    <h2>Conhecimentos Técnicos</h2>
-    <ul>
-        <li>Desenvolvimento Web: HTML, CSS, Javascript.</li>
-        <li>Banco de dados: MySQL.</li>
-        <li>Google: Analytics/ADS</li>
-    </ul>
-</body>
-</html> 
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+    <title>Currículo Dev</title>
+    <link rel="stylesheet" href="./src/css/index.css" />
+    <link rel="stylesheet" href="./src/css/reset.css" />
+  </head>
+  <body>
+    <header class="cabecalho">
+      <h1 class="logo">Kaue Aparecido da Conceição de Lima</h1>
+    </header>
+    <main class="container">
+      <section class="descricao">
+        <div class="descricao_informacao">
+          <h2 class="title">Programador Frontend</h2>
+          <p class="text">
+            Com uma experiência de 4 anos como auxiliar de administração,
+            destaco minha habilidade em criar e elaborar planilhas intuitivas e
+            eficientes. Diante dos desafios impostos pela pandemia e da escassez
+            de material didático, optei por interromper temporariamente meus
+            estudos na ETEC de Informática para Internet e Desenvolvimento de
+            Sistemas. Agora, almejo uma transição para o desenvolvimento
+            fullstack. Graças ao meu conhecimento e aos esforços dedicados ao
+            aprimoramento das minhas habilidades, venho atuando como freelancer
+            nos últimos 3 meses. Meus principais domínios incluem HTML, CSS e
+            JavaScript.
+          </p>
+        </div>
+      </section>
+      <section class="experiencia-profissional">
+        <div class="informacoes-adicionais">
+        <h2 class="title_experiencia-profissional">Experiência profissional</h2>
+          <div class="freelancer">
+            <h3>Freelancer</h3>
+            <p><span>Desenvolvedor Frontend</span></p>
+            <p>Dezembro 2023 – Presente</p>
+          </div>
+          <div class="experiencias-projetos">
+            <h3 class="default-title">Projeto: Venda Do Jogo GTA V</h3>
+            <a href="https://kaueaclima.github.io/projeto-gta/"
+              >https://kaueaclima.github.io/projeto-gta/</a
+            >
+            <ul class="descricao-site">
+              <li>
+                O site oferece a possibilidade de comprar o jogo em todas as
+                plataformas.
+              </li>
+              <li>Tecnologias: HTML5, CSS3 e JavaScript</li>
+            </ul>
+          </div>
+          <div class="experiencias-projetos">
+            <h3 class="default-title">Projeto Inscrição Evento</h3>
+            <a href="https://kaueaclima.github.io/projeto-incricao-evento/"
+              >https://kaueaclima.github.io/projeto-incricao-evento/</a
+            >
+            <ul class="descricao-site">
+              <li>
+                A proposta do site é poder se inscrever com nome completo junto
+                com e-mail
+              </li>
+              <li>
+                Atualizar a lista de participante, da inscrição e do check-in
+              </li>
+              <li>Tecnologias: HTML5, CSS3</li>
+            </ul>
+          </div>
+        </div>
+        <div class="informacoes-pessoais-adicionais">
+          <div class="contato">
+            <h2>Contato</h2>
+            <div class="email">
+              <img class="icone" src="./src/imagens/o-email.png" alt="icone e-mail"><p>kaue5939.lima@gmail.com</p>
+            </div>
+            <div class="whatsapp">
+              <img class="icone" src="./src/imagens/whatsapp.png" alt="icone whatsapp"><p>(11) 99310-6261</p>
+            </div>
+            <div class="github">
+              <img class="icone" src="./src/imagens/github.png" alt="icone github"><p><a href="https://github.com/KaueACLima">/KaueACLima</a></p>
+            </div>
+            <div class="linkedin">
+              <img class="icone" src="./src/imagens/linkedin.png" alt="icone linkedin"><p><a href="https://www.linkedin.com/in/kau%C3%AA-lima-234515182/">/in/kauê-lima-234515182/</a></p>
+            </div>
+          </div>
+          <div class="educacao">
+            <h2>Educação</h2>
+            <div class="etec-parque-belem">
+              <h3>ETEC Parque Belém</h3>
+              <ul class="descricao-etec">
+                <li><strong>HTML:</strong> Básico ao intermediário</li>
+                <li><strong>CSS:</strong> Básico ao intermediário</li>
+                <li><strong>JavaScript:</strong> Básico</li>
+              </ul>
+            </div>
+            <div class="etec-aprigio-gonzaga">
+              <h3>ETEC Aprígio Gonzaga</h3>
+              <h4>(Extensão Carvalho Senne)</h4>
+              <ul class="descricao-etec">
+                <li><strong>HTML:</strong> Intermediário ao avançado</li>
+                <li><strong>CSS:</strong> Intermediário ao avançado</li>
+                <li><strong>JavaScript:</strong> Intermediário</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
+</html>
